--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,15 @@
-API_PORT=
+API_PORT=3000
+NODE_ENV="developer"
 
-MONGO_HOST=
-MONGO_PORT=
-MONGO_DATABASE=
-MONGO_PASSWORD=
-MONGO_USERNAME=
-DB_URL_TEST=
+MONGODB_URI=
+MONGODB_URI_TEST=
+
+ADMIN_NAME="admin"
+ADMIN_EMAIL="admin@gmail.com"
+ADMIN_PASSWORD="admin"
+
+JWT_LIFETIME=3600
+JWT_REFRESH_LIFETIME=7200
+
+JWT_SECURE=
+JWT_SECURE_REFRESH=
