--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^6.4.0",
     "express-validator": "^6.14.2",
     "helmet": "^5.1.0",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "mongoose-delete": "^0.5.4",
