--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,11 @@
-API_PORT=3000
-NODE_ENV="developer"
-
-MONGODB_URI=
-MONGODB_URI_TEST=
-
-ADMIN_NAME="admin"
 ADMIN_EMAIL="admin@gmail.com"
+ADMIN_NAME="admin"
 ADMIN_PASSWORD="admin"
-
 JWT_LIFETIME=3600
 JWT_REFRESH_LIFETIME=7200
-
-JWT_SECURE=
 JWT_SECURE_REFRESH=
+JWT_SECURE=
+MONGODB_URI_TEST=
+MONGODB_URI=
+NODE_ENV="developer"
+PORT=3000
