Added the Dockerfile and docker-compose files

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,9 @@
 ADMIN_EMAIL="admin@gmail.com"
 ADMIN_NAME="admin"
-ADMIN_PASSWORD="admin"
-JWT_LIFETIME=3600
-JWT_REFRESH_LIFETIME=7200
-JWT_SECURE_REFRESH=
-JWT_SECURE=
-MONGODB_URI_TEST=
-MONGODB_URI=
+ADMIN_PASSWORD="11223344"
+API_PORT=4044
+JWT_SECURE_REFRESH="3456b4543c0c0a8b9ba1eb6cf7c2ee8e"
+JWT_SECURE="GYDHJewcUxhbPYiUpYY5jKWb4OA1b84G"
+MONGODB_URI_TEST="mongodb://rootdb:passdb@mongo:27017/workout"
+MONGODB_URI="mongodb://rootdb:passdb@mongo:27017/workout"
 NODE_ENV="developer"
-PORT=3000
