--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: passdb
     ports:
       - 27017:27017
-      
+    volumes:
+      - ./mongodata:/var/lib/mongodb/data
+
   node:
     build: .
     restart: always
